Hopefully this doesn't break Bamboo. Adding Java 9 support.